# wh-foundry

./: .env.sample  .gitignore  Architecture.md  README.md  Sample-Queries.md  Seed-Questions.txt  azure.yaml  chat.py  package-lock.json  pyproject.toml  scrape-config.yaml  scrape_pages.py  setup_agent.py  start.sh  tracing.py  upload_docs.py
.github/: copilot-instructions.md
.github/prompts/: create-architecture.prompt.md  create-scraper.prompt.md
infra/: abbreviations.json  main.bicep
infra/modules/: ai-services-role.bicep  ai-services.bicep  app-insights.bicep  model-deployments.bicep  search.bicep  storage-role.bicep  storage.bicep
infra/scripts/: setup-search.sh
infra/search-config/: datasource.json  index.json  indexer.json  skillset.json
web/: .gitignore  package-lock.json  package.json
web/api/: server.py  voice_ws.py
web/public/: mic-processor.js  playback-processor.js
web/src/: App.tsx  api.ts  index.css
web/src/components/: ChatPanel.module.css  ChatPanel.tsx  ChatWidget.module.css  ChatWidget.tsx  MemoryPanel.module.css  MemoryPanel.tsx  Sidebar.module.css  Sidebar.tsx  SourceModal.module.css  SourceModal.tsx  VoiceControls.module.css  VoiceControls.tsx
web/src/hooks/: useVoice.ts
web/src/pages/: EmbedPage.module.css  EmbedPage.tsx  FullAppPage.module.css  FullAppPage.tsx  WidgetPage.module.css  WidgetPage.tsx
web/src/stores/: chatStore.ts  memoryStore.ts
wh-kb-docs-md/: wh-location-footscray-hospital.md  wh-locations.md  wh-patients-and-visitors-accessing-medical-records.md  wh-patients-and-visitors-patient-fees-and-billing.md  wh-patients-and-visitors-patient-transport-services.md  wh-patients-and-visitors-what-to-bring.md  wh-patients-and-visitors-your-referral.md  wh-services-cancer-services.md  wh-services-maternal-services.md  wh-services-newborn-services.md  wh-services-paediatrics.md
wh_foundry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
